Исправление ошибок в CSS Таблица

--- a/Таблица CSS/Table.html
+++ b/Таблица CSS/Table.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Table</title>
-    <link rel="stylesheet" type="text/css" href="Style.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/Reset.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/Style.css"/>
 </head>
 <body>
-<table class="twitterTable">
+<table class="twitter-table">
     <thead>
-    <tr >
-        <th style="width: 155px" >
+    <tr>
+        <th>
             First Name
         </th>
-        <th style="width: 150px">
+        <th>
             Last Name
         </th>
-        <th style="width: 270px">
+        <th>
             Job Title
         </th>
-        <th style="width: 175px">
+        <th>
             Twitter
         </th>
     </tr>
     </thead>
     <tbody>
     <tr>
-        <th >
+        <th>
             James
         </th>
         <th>
@@ -38,8 +39,8 @@
             @james
         </th>
     </tr>
-    <tr >
-        <th >
+    <tr>
+        <th>
             Andor
         </th>
         <th>
@@ -52,8 +53,8 @@
             @andonagy
         </th>
     </tr>
-    <tr >
-        <th >
+    <tr>
+        <th>
             Tamas
         </th>
         <th>
@@ -67,7 +68,7 @@
         </th>
     </tr>
     <tr>
-        <th >
+        <th>
             Zoli
         </th>
         <th>
@@ -80,8 +81,8 @@
             @zoli
         </th>
     </tr>
-    <tr >
-        <th >
+    <tr>
+        <th>
             Szabi
         </th>
         <th>
